name:                Lispy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jw3126/Lispy#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Weidner
maintainer:          jw3123@gmail.com
copyright:           Jan Weidner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Expr
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable Lispy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Lispy
                     , parsec
  default-language:    Haskell2010

test-suite Lispy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Lispy
                     , parsec
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jw3126/Lispy
